# MailMaster

./: .env.sample  .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  dump.rdb  pyproject.toml
config/: celery.py  settings.py  urls.py
mailmaster/: admin.py  apps.py  cron.py  forms.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
mailmaster/migrations/: 0001_initial.py  0002_alter_emailsendattempt_options.py  0003_alter_message_options_and_more.py  0004_newsletter_is_active.py  0005_alter_newsletter_end_date.py  0006_alter_newsletter_period.py  0007_alter_newsletter_end_date.py  0008_alter_newsletter_end_date.py  0009_alter_newsletter_end_date.py  0010_alter_newsletter_end_date.py  0011_alter_newsletter_end_date.py  0012_alter_newsletter_options_remove_newsletter_is_active_and_more.py  0013_newsletter_is_active.py  0014_alter_client_comment_alter_emailsendattempt_response.py  0015_alter_newsletter_status.py  0016_alter_newsletter_status.py  0017_newsletter_sent_today.py  0018_alter_newsletter_clients.py  0019_alter_newsletter_status.py  0020_client_owner_message_owner_alter_newsletter_user.py  0021_remove_newsletter_user_newsletter_owner.py  0022_alter_client_options_alter_message_options_and_more.py  0023_alter_client_options.py  0024_alter_message_options_alter_newsletter_options.py  0025_alter_message_options.py
mailmaster/templatetags/: tags_library.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_phone_and_more.py  (+2 more)
(+25 files in other folders)
